--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     , "everyauth": ">=0.2.32"
     , "connect": "~ 2.11.0"
     , "classtool": "~ 1.0.0"
+    , "base58-native": "0.1.3"
+    , "crypto": "0.0.3"
+    , "hashids": "0.3.3"
   }
 }
